--- a/css/styles.css
+++ b/css/styles.css
@@ -165,8 +165,8 @@ a {
   line-height: 100%;
 }
 
-/*@import url(https://fonts.googleapis.com/css2?family=REM:wght@100;200;400;500;600;700;800&display=swap);
-*,
+@import url(https://fonts.googleapis.com/css2?family=REM:wght@100;200;400;500;600;700;800&display=swap);
+/**,
 ::after,
 ::before {
   box-sizing: border-box;
