--- a/css/styles.css
+++ b/css/styles.css
@@ -221,11 +221,12 @@ a {
   --tw-backdrop-sepia: ;
 }
 
-/*::after,
+::after,
 ::before {
   --tw-content: "";
 }
-html {
+
+/*html {
   line-height: 1.5;
   -webkit-text-size-adjust: 100%;
   -moz-tab-size: 4;
