--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ a {
   --tw-content: "";
 }
 
-/*html {
+html {
   line-height: 1.5;
   -webkit-text-size-adjust: 100%;
   -moz-tab-size: 4;
@@ -238,7 +238,8 @@ a {
   position: relative;
   scroll-behavior: smooth;
 }
-body {
+
+/*body {
   margin: 0;
   line-height: inherit;
 }
