--- a/css/styles.css
+++ b/css/styles.css
@@ -244,12 +244,13 @@ body {
   line-height: inherit;
 }
 
-/*hr {
+hr {
   height: 0;
   color: inherit;
   border-top-width: 1px;
 }
-abbr:where([title]) {
+
+/*abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
 }
