--- a/css/styles.css
+++ b/css/styles.css
@@ -250,11 +250,12 @@ hr {
   border-top-width: 1px;
 }
 
-/*abbr:where([title]) {
+abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
 }
-h1,
+
+/*h1,
 h2,
 h3,
 h4,
