--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ abbr:where([title]) {
   text-decoration: underline dotted;
 }
 
-/*h1,
+h1,
 h2,
 h3,
 h4,
@@ -263,7 +263,8 @@ h5,
 h6 {
   font-size: inherit;
 }
-a {
+
+/*a {
   color: inherit;
   text-decoration: inherit;
 }
