--- a/css/styles.css
+++ b/css/styles.css
@@ -283,10 +283,11 @@ samp {
   font-size: 1em;
 }
 
-/*small {
+small {
   font-size: 80%;
 }
-sub,
+
+/*sub,
 sup {
   font-size: 75%;
   line-height: 0;
