--- a/css/styles.css
+++ b/css/styles.css
@@ -287,14 +287,15 @@ small {
   font-size: 80%;
 }
 
-/*sub,
+sub,
 sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
 }
-sub {
+
+/*sub {
   bottom: -0.25em;
 }
 sup {
