--- a/css/styles.css
+++ b/css/styles.css
@@ -325,11 +325,12 @@ textarea {
   padding: 0;
 }
 
-/*button,
+button,
 select {
   text-transform: none;
 }
-[type="button"],
+
+/*[type="button"],
 [type="reset"],
 [type="submit"],
 button {
