--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ select {
   text-transform: none;
 }
 
-/*[type="button"],
+[type="button"],
 [type="reset"],
 [type="submit"],
 button {
@@ -338,6 +338,8 @@ button {
   background-color: transparent;
   background-image: none;
 }
+
+/*
 :-moz-focusring {
   outline: auto;
 }
