--- a/css/styles.css
+++ b/css/styles.css
@@ -400,14 +400,15 @@ legend {
   padding: 0;
 }
 
-/*menu,
+menu,
 ol,
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-textarea {
+
+/*textarea {
   resize: vertical;
 }
 input::-moz-placeholder,
