--- a/css/styles.css
+++ b/css/styles.css
@@ -408,10 +408,11 @@ ul {
   padding: 0;
 }
 
-/*textarea {
+textarea {
   resize: vertical;
 }
-input::-moz-placeholder,
+
+/*input::-moz-placeholder,
 textarea::-moz-placeholder {
   opacity: 1;
   color: #9ca3af;
