--- a/css/styles.css
+++ b/css/styles.css
@@ -412,12 +412,13 @@ textarea {
   resize: vertical;
 }
 
-/*input::-moz-placeholder,
+input::-moz-placeholder,
 textarea::-moz-placeholder {
   opacity: 1;
   color: #9ca3af;
 }
-input::placeholder,
+
+/*input::placeholder,
 textarea::placeholder {
   opacity: 1;
   color: #9ca3af;
