--- a/css/styles.css
+++ b/css/styles.css
@@ -418,12 +418,13 @@ textarea::-moz-placeholder {
   color: #9ca3af;
 }
 
-/*input::placeholder,
+input::placeholder,
 textarea::placeholder {
   opacity: 1;
   color: #9ca3af;
 }
-[role="button"],
+
+/*[role="button"],
 button {
   cursor: pointer;
 }
