--- a/css/styles.css
+++ b/css/styles.css
@@ -433,7 +433,7 @@ button {
   cursor: default;
 }
 
-/*audio,
+audio,
 canvas,
 embed,
 iframe,
@@ -444,7 +444,8 @@ video {
   display: block;
   vertical-align: middle;
 }
-img,
+
+/*img,
 video {
   max-width: 100%;
   height: auto;
