--- a/css/styles.css
+++ b/css/styles.css
@@ -445,12 +445,13 @@ video {
   vertical-align: middle;
 }
 
-/*img,
+img,
 video {
   max-width: 100%;
   height: auto;
 }
-[hidden] {
+
+/*[hidden] {
   display: none;
 }
 ::backdrop {
