--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,6 @@ video {
   --tw-backdrop-sepia: ;
 }
 
-/*
 .container {
   width: 100%;
   margin-right: auto;
@@ -513,7 +512,8 @@ video {
   padding-right: 1rem;
   padding-left: 1rem;
 }
-@media (min-width: 640px) {
+
+/*@media (min-width: 640px) {
   .container {
     max-width: 640px;
     padding-right: 1rem;
