--- a/css/styles.css
+++ b/css/styles.css
@@ -565,10 +565,11 @@ video {
   position: relative;
 }
 
-/*.inset-0 {
+.inset-0 {
   inset: 0px;
 }
-.bottom-0 {
+
+/*.bottom-0 {
   bottom: 0;
 }
 .left-0 {
