--- a/css/styles.css
+++ b/css/styles.css
@@ -601,10 +601,11 @@ video {
   z-index: 30;
 }
 
-/*.m-1 {
+.m-1 {
   margin: 0.25rem;
 }
-.mx-10 {
+
+/*.mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
 }
