--- a/css/styles.css
+++ b/css/styles.css
@@ -605,11 +605,12 @@ video {
   margin: 0.25rem;
 }
 
-/*.mx-10 {
+.mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
 }
-.mx-auto {
+
+/*.mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
