--- a/css/styles.css
+++ b/css/styles.css
@@ -619,10 +619,11 @@ video {
   margin-bottom: -0.25rem;
 }
 
-/*.-mb-8 {
+.-mb-8 {
   margin-bottom: -2rem;
 }
-.-ml-10 {
+
+/*.-ml-10 {
   margin-left: -2.5rem;
 }
 .-ml-12 {
