--- a/css/styles.css
+++ b/css/styles.css
@@ -635,13 +635,15 @@ video {
   margin-left: -0.5rem;
 }
 
-/*.-ml-3 {
+.-ml-3 {
   margin-left: -0.75rem;
 }
+
 .-mr-1 {
   margin-right: -0.25rem;
 }
-.-mr-10 {
+
+/*.-mr-10 {
   margin-right: -2.5rem;
 }
 .-mr-3 {
@@ -662,7 +664,7 @@ video {
 .mb-0 {
   margin-bottom: 0;
 }
-.mb-10 {
+/*.mb-10 {
   margin-bottom: 2.5rem;
 }
 .mb-2 {
