--- a/css/styles.css
+++ b/css/styles.css
@@ -651,10 +651,11 @@ video {
   margin-right: -0.75rem;
 }
 
-/*.-mr-5 {
+.-mr-5 {
   margin-right: -1.25rem;
 }
-.-mt-1 {
+
+/*.-mt-1 {
   margin-top: -0.25rem;
 }
 .-mt-10 {
