--- a/css/styles.css
+++ b/css/styles.css
@@ -663,10 +663,11 @@ video {
   margin-top: -2.5rem;
 }
 
-/*.-mt-12 {
+.-mt-12 {
   margin-top: -3rem;
 }
-.mb-0 {
+
+/*.mb-0 {
   margin-bottom: 0;
 }
 /*.mb-10 {
