--- a/css/styles.css
+++ b/css/styles.css
@@ -687,10 +687,11 @@ video {
   margin-bottom: 8rem;
 }
 
-/*.mb-9 {
+.mb-9 {
   margin-bottom: 2.25rem;
 }
-.ml-0 {
+
+/*.ml-0 {
   margin-left: 0;
 }
 .ml-0\.5 {
