--- a/css/styles.css
+++ b/css/styles.css
@@ -691,10 +691,11 @@ video {
   margin-bottom: 2.25rem;
 }
 
-/*.ml-0 {
+.ml-0 {
   margin-left: 0;
 }
-.ml-0\.5 {
+
+/*.ml-0\.5 {
   margin-left: 0.125rem;
 }
 .ml-1 {
