--- a/css/styles.css
+++ b/css/styles.css
@@ -695,10 +695,11 @@ video {
   margin-left: 0;
 }
 
-/*.ml-0\.5 {
+.ml-0\.5 {
   margin-left: 0.125rem;
 }
-.ml-1 {
+
+/*.ml-1 {
   margin-left: 0.25rem;
 }
 .ml-2 {
