--- a/css/styles.css
+++ b/css/styles.css
@@ -707,10 +707,11 @@ video {
   margin-left: 0.5rem;
 }
 
-/*.ml-9 {
+.ml-9 {
   margin-left: 2.25rem;
 }
-.mr-1 {
+
+/*.mr-1 {
   margin-right: 0.25rem;
 }
 .mr-2 {
