--- a/css/styles.css
+++ b/css/styles.css
@@ -719,10 +719,11 @@ video {
   margin-right: 0.5rem;
 }
 
-/*.mr-4 {
+.mr-4 {
   margin-right: 1rem;
 }
-.mt-0 {
+
+/*.mt-0 {
   margin-top: 0;
 }
 .mt-0\.5 {
