--- a/css/styles.css
+++ b/css/styles.css
@@ -723,10 +723,11 @@ video {
   margin-right: 1rem;
 }
 
-/*.mt-0 {
+.mt-0 {
   margin-top: 0;
 }
-.mt-0\.5 {
+
+/*.mt-0\.5 {
   margin-top: 0.125rem;
 }
 .mt-1 {
