--- a/css/styles.css
+++ b/css/styles.css
@@ -727,10 +727,11 @@ video {
   margin-top: 0;
 }
 
-/*.mt-0\.5 {
+.mt-0\.5 {
   margin-top: 0.125rem;
 }
-.mt-1 {
+
+/*.mt-1 {
   margin-top: 0.25rem;
 }
 .box-border {
