--- a/css/styles.css
+++ b/css/styles.css
@@ -731,10 +731,11 @@ video {
   margin-top: 0.125rem;
 }
 
-/*.mt-1 {
+.mt-1 {
   margin-top: 0.25rem;
 }
-.box-border {
+
+/*.box-border {
   box-sizing: border-box;
 }
 .block {
