--- a/css/styles.css
+++ b/css/styles.css
@@ -755,10 +755,11 @@ video {
   display: inline-flex;
 }
 
-/*.grid {
+.grid {
   display: grid;
 }
-.hidden {
+
+/*.hidden {
   display: none;
 }
 .h-0 {
