--- a/css/styles.css
+++ b/css/styles.css
@@ -767,10 +767,11 @@ video {
   height: 0;
 }
 
-/*.h-0\.5 {
+.h-0\.5 {
   height: 0.125rem;
 }
-.h-1 {
+
+/*.h-1 {
   height: 0.25rem;
 }
 .h-1\/3 {
