--- a/css/styles.css
+++ b/css/styles.css
@@ -771,10 +771,11 @@ video {
   height: 0.125rem;
 }
 
-/*.h-1 {
+.h-1 {
   height: 0.25rem;
 }
-.h-1\/3 {
+
+/*.h-1\/3 {
   height: 33.333333%;
 }
 .h-10 {
