--- a/css/styles.css
+++ b/css/styles.css
@@ -775,10 +775,11 @@ video {
   height: 0.25rem;
 }
 
-/*.h-1\/3 {
+.h-1\/3 {
   height: 33.333333%;
 }
-.h-10 {
+
+/*.h-10 {
   height: 2.5rem;
 }
 .h-12 {
