--- a/css/styles.css
+++ b/css/styles.css
@@ -899,10 +899,11 @@ video {
   width: 100%;
 }
 
-/*.origin-bottom-left {
+.origin-bottom-left {
   transform-origin: bottom left;
 }
-.origin-center {
+
+/*.origin-center {
   transform-origin: center;
 }
 .origin-top-right {
