--- a/css/styles.css
+++ b/css/styles.css
@@ -1097,10 +1097,11 @@ video {
   justify-content: flex-start;
 }
 
-/*.justify-center {
+.justify-center {
   justify-content: center;
 }
-.gap-6 {
+
+/*.gap-6 {
   gap: 1.5rem;
 }
 .overflow-hidden {
