--- a/css/styles.css
+++ b/css/styles.css
@@ -1101,10 +1101,11 @@ video {
   justify-content: center;
 }
 
-/*.gap-6 {
+.gap-6 {
   gap: 1.5rem;
 }
-.overflow-hidden {
+
+/*.overflow-hidden {
   overflow: hidden;
 }
 .rounded {
