--- a/css/styles.css
+++ b/css/styles.css
@@ -1105,10 +1105,11 @@ video {
   gap: 1.5rem;
 }
 
-/*.overflow-hidden {
+.overflow-hidden {
   overflow: hidden;
 }
-.rounded {
+
+/*.rounded {
   border-radius: 0.25rem;
 }
 .rounded-2xl {
