--- a/css/styles.css
+++ b/css/styles.css
@@ -1113,10 +1113,11 @@ video {
   border-radius: 0.25rem;
 }
 
-/*.rounded-2xl {
+.rounded-2xl {
   border-radius: 1rem;
 }
-.rounded-full {
+
+/*.rounded-full {
   border-radius: 9999px;
 }
 .rounded-lg {
