--- a/css/styles.css
+++ b/css/styles.css
@@ -1121,10 +1121,11 @@ video {
   border-radius: 9999px;
 }
 
-/*.rounded-lg {
+.rounded-lg {
   border-radius: 0.5rem;
 }
-.rounded-md {
+
+/*.rounded-md {
   border-radius: 0.375rem;
 }
 .rounded-xl {
