--- a/css/styles.css
+++ b/css/styles.css
@@ -1125,10 +1125,11 @@ video {
   border-radius: 0.5rem;
 }
 
-/*.rounded-md {
+.rounded-md {
   border-radius: 0.375rem;
 }
-.rounded-xl {
+
+/*.rounded-xl {
   border-radius: 0.75rem;
 }
 .border {
