--- a/css/styles.css
+++ b/css/styles.css
@@ -1153,10 +1153,11 @@ video {
   border-bottom-width: 2px;
 }
 
-/*.border-b-4 {
+.border-b-4 {
   border-bottom-width: 4px;
 }
-.border-l-2 {
+
+/*.border-l-2 {
   border-left-width: 2px;
 }
 .border-t-2 {
