--- a/css/styles.css
+++ b/css/styles.css
@@ -1161,10 +1161,11 @@ video {
   border-left-width: 2px;
 }
 
-/*.border-t-2 {
+.border-t-2 {
   border-top-width: 2px;
 }
-.border-solid {
+
+/*.border-solid {
   border-style: solid;
 }
 .border-black {
