--- a/css/styles.css
+++ b/css/styles.css
@@ -1169,11 +1169,12 @@ video {
   border-style: solid;
 }
 
-/*.border-black {
+.border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
-.border-blue-700 {
+
+/*.border-blue-700 {
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
