--- a/css/styles.css
+++ b/css/styles.css
@@ -1174,11 +1174,12 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-/*.border-blue-700 {
+.border-blue-700 {
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
-.border-gray-100 {
+
+/*.border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
