--- a/css/styles.css
+++ b/css/styles.css
@@ -1204,11 +1204,12 @@ video {
   border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }
 
-/*.border-indigo-600 {
+.border-indigo-600 {
   --tw-border-opacity: 1;
   border-color: rgb(79 70 229 / var(--tw-border-opacity));
 }
-.border-purple-500 {
+
+/*.border-purple-500 {
   --tw-border-opacity: 1;
   border-color: rgb(168 85 247 / var(--tw-border-opacity));
 }
