--- a/css/styles.css
+++ b/css/styles.css
@@ -1223,11 +1223,12 @@ video {
   border-color: transparent;
 }
 
-/*.border-white {
+.border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
-.bg-black {
+
+/*.bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
