--- a/css/styles.css
+++ b/css/styles.css
@@ -1228,11 +1228,12 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-/*.bg-black {
+.bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
-.bg-blue-100\/60 {
+
+/*.bg-blue-100\/60 {
   background-color: rgb(219 234 254 / 0.6);
 }
 .bg-blue-600 {
