--- a/css/styles.css
+++ b/css/styles.css
@@ -1233,10 +1233,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-/*.bg-blue-100\/60 {
+.bg-blue-100\/60 {
   background-color: rgb(219 234 254 / 0.6);
 }
-.bg-blue-600 {
+
+/*.bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
