--- a/css/styles.css
+++ b/css/styles.css
@@ -1237,11 +1237,12 @@ video {
   background-color: rgb(219 234 254 / 0.6);
 }
 
-/*.bg-blue-600 {
+.bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
-.bg-gray-100 {
+
+/*.bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
