--- a/css/styles.css
+++ b/css/styles.css
@@ -1272,11 +1272,12 @@ video {
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
-/*.bg-green-500 {
+.bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
-.bg-indigo-600 {
+
+/*.bg-indigo-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
