--- a/css/styles.css
+++ b/css/styles.css
@@ -1277,11 +1277,12 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
-/*.bg-indigo-600 {
+.bg-indigo-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
-.bg-pink-500 {
+
+/*.bg-pink-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 72 153 / var(--tw-bg-opacity));
 }
