--- a/css/styles.css
+++ b/css/styles.css
@@ -1312,11 +1312,12 @@ video {
   background-color: rgb(126 34 206 / var(--tw-bg-opacity));
 }
 
-/*.bg-purple-800 {
+.bg-purple-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 33 168 / var(--tw-bg-opacity));
 }
-.bg-red-300 {
+
+/*.bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
