--- a/css/styles.css
+++ b/css/styles.css
@@ -1342,10 +1342,11 @@ video {
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 
-/*.bg-transparent {
+.bg-transparent {
   background-color: transparent;
 }
-.bg-white {
+
+/*.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
