--- a/css/styles.css
+++ b/css/styles.css
@@ -1346,11 +1346,12 @@ video {
   background-color: transparent;
 }
 
-/*.bg-white {
+.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-gradient-to-b {
+
+/*.bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 .bg-gradient-to-br {
