--- a/css/styles.css
+++ b/css/styles.css
@@ -1355,10 +1355,11 @@ video {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-/*.bg-gradient-to-br {
+.bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
-.bg-gradient-to-l {
+
+/*.bg-gradient-to-l {
   background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
 .bg-gradient-to-r {
