--- a/css/styles.css
+++ b/css/styles.css
@@ -1359,10 +1359,11 @@ video {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
-/*.bg-gradient-to-l {
+.bg-gradient-to-l {
   background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
-.bg-gradient-to-r {
+
+/*.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 .bg-gradient-to-t {
