--- a/css/styles.css
+++ b/css/styles.css
@@ -1363,10 +1363,11 @@ video {
   background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
 
-/*.bg-gradient-to-r {
+.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
-.bg-gradient-to-t {
+
+/*.bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 .bg-gradient-to-tr {
