--- a/css/styles.css
+++ b/css/styles.css
@@ -1371,10 +1371,11 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
-/*.bg-gradient-to-tr {
+.bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
-.from-\[\#ff8a05\] {
+
+/*.from-\[\#ff8a05\] {
   --tw-gradient-from: #ff8a05 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 138 5 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
