--- a/css/styles.css
+++ b/css/styles.css
@@ -1423,12 +1423,13 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-/*.from-white {
+.from-white {
   --tw-gradient-from: #fff var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.via-\[\#ff5478\] {
+
+/*.via-\[\#ff5478\] {
   --tw-gradient-to: rgb(255 84 120 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #ff5478 var(--tw-gradient-via-position), var(--tw-gradient-to);
