--- a/css/styles.css
+++ b/css/styles.css
@@ -1429,12 +1429,13 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-/*.via-\[\#ff5478\] {
+.via-\[\#ff5478\] {
   --tw-gradient-to: rgb(255 84 120 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #ff5478 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
-.via-indigo-500 {
+
+/*.via-indigo-500 {
   --tw-gradient-to: rgb(99 102 241 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #6366f1 var(--tw-gradient-via-position), var(--tw-gradient-to);
