--- a/css/styles.css
+++ b/css/styles.css
@@ -1435,12 +1435,13 @@ video {
     #ff5478 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-/*.via-indigo-500 {
+.via-indigo-500 {
   --tw-gradient-to: rgb(99 102 241 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #6366f1 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
-.via-purple-600 {
+
+/*.via-purple-600 {
   --tw-gradient-to: rgb(147 51 234 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #9333ea var(--tw-gradient-via-position), var(--tw-gradient-to);
