--- a/css/styles.css
+++ b/css/styles.css
@@ -1447,12 +1447,13 @@ video {
     #9333ea var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-/*.via-purple-700 {
+.via-purple-700 {
   --tw-gradient-to: rgb(126 34 206 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #7e22ce var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
-.via-transparent {
+
+/*.via-transparent {
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
