--- a/css/styles.css
+++ b/css/styles.css
@@ -1453,12 +1453,13 @@ video {
     #7e22ce var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-/*.via-transparent {
+.via-transparent {
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
-.to-\[\#ff00c6\] {
+
+/*.to-\[\#ff00c6\] {
   --tw-gradient-to: #ff00c6 var(--tw-gradient-to-position);
 }
 .to-blue-400 {
