--- a/css/styles.css
+++ b/css/styles.css
@@ -1483,10 +1483,11 @@ video {
   --tw-gradient-to: #374151 var(--tw-gradient-to-position);
 }
 
-/*.to-indigo-500 {
+.to-indigo-500 {
   --tw-gradient-to: #6366f1 var(--tw-gradient-to-position);
 }
-.to-pink-500 {
+
+/*.to-pink-500 {
   --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
 }
 .to-pink-700 {
