--- a/css/styles.css
+++ b/css/styles.css
@@ -1512,11 +1512,12 @@ video {
   background-clip: text;
 }
 
-/*.object-cover {
+.object-cover {
   -o-object-fit: cover;
   object-fit: cover;
 }
-.p-0 {
+
+/*.p-0 {
   padding: 0;
 }
 .p-0\.5 {
