--- a/css/styles.css
+++ b/css/styles.css
@@ -1517,10 +1517,11 @@ video {
   object-fit: cover;
 }
 
-/*.p-0 {
+.p-0 {
   padding: 0;
 }
-.p-0\.5 {
+
+/*.p-0\.5 {
   padding: 0.125rem;
 }
 .p-4 {
