--- a/css/styles.css
+++ b/css/styles.css
@@ -1521,10 +1521,11 @@ video {
   padding: 0;
 }
 
-/*.p-0\.5 {
+.p-0\.5 {
   padding: 0.125rem;
 }
-.p-4 {
+
+/*.p-4 {
   padding: 1rem;
 }
 .px-10 {
