--- a/css/styles.css
+++ b/css/styles.css
@@ -1525,10 +1525,11 @@ video {
   padding: 0.125rem;
 }
 
-/*.p-4 {
+.p-4 {
   padding: 1rem;
 }
-.px-10 {
+
+/*.px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
