--- a/css/styles.css
+++ b/css/styles.css
@@ -1539,11 +1539,12 @@ video {
   padding-right: 3rem;
 }
 
-/*.px-3 {
+.px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.px-3\.5 {
+
+/*.px-3\.5 {
   padding-left: 0.875rem;
   padding-right: 0.875rem;
 }
