--- a/css/styles.css
+++ b/css/styles.css
@@ -1544,11 +1544,12 @@ video {
   padding-right: 0.75rem;
 }
 
-/*.px-3\.5 {
+.px-3\.5 {
   padding-left: 0.875rem;
   padding-right: 0.875rem;
 }
-.px-4 {
+
+/*.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
