--- a/css/styles.css
+++ b/css/styles.css
@@ -1584,11 +1584,12 @@ video {
   padding-bottom: 0;
 }
 
-/*.py-2 {
+.py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.py-2\.5 {
+
+/*.py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
