--- a/css/styles.css
+++ b/css/styles.css
@@ -1589,11 +1589,12 @@ video {
   padding-bottom: 0.5rem;
 }
 
-/*.py-2\.5 {
+.py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
-.py-3 {
+
+/*.py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
