--- a/css/styles.css
+++ b/css/styles.css
@@ -1599,11 +1599,12 @@ video {
   padding-bottom: 0.75rem;
 }
 
-/*.py-4 {
+.py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.pb-20 {
+
+/*.pb-20 {
   padding-bottom: 5rem;
 }
 .pl-2 {
