--- a/css/styles.css
+++ b/css/styles.css
@@ -1604,10 +1604,11 @@ video {
   padding-bottom: 1rem;
 }
 
-/*.pb-20 {
+.pb-20 {
   padding-bottom: 5rem;
 }
-.pl-2 {
+
+/*.pl-2 {
   padding-left: 0.5rem;
 }
 .pl-2\.5 {
