--- a/css/styles.css
+++ b/css/styles.css
@@ -1608,10 +1608,11 @@ video {
   padding-bottom: 5rem;
 }
 
-/*.pl-2 {
+.pl-2 {
   padding-left: 0.5rem;
 }
-.pl-2\.5 {
+
+/*.pl-2\.5 {
   padding-left: 0.625rem;
 }
 .pl-4 {
