--- a/css/styles.css
+++ b/css/styles.css
@@ -1612,10 +1612,11 @@ video {
   padding-left: 0.5rem;
 }
 
-/*.pl-2\.5 {
+.pl-2\.5 {
   padding-left: 0.625rem;
 }
-.pl-4 {
+
+/*.pl-4 {
   padding-left: 1rem;
 }
 .pr-12 {
