--- a/css/styles.css
+++ b/css/styles.css
@@ -1628,10 +1628,11 @@ video {
   padding-right: 1rem;
 }
 
-/*.pr-5 {
+.pr-5 {
   padding-right: 1.25rem;
 }
-.pt-28 {
+
+/*.pt-28 {
   padding-top: 7rem;
 }
 .text-left {
