--- a/css/styles.css
+++ b/css/styles.css
@@ -1644,10 +1644,11 @@ video {
   text-align: center;
 }
 
-/*.align-middle {
+.align-middle {
   vertical-align: middle;
 }
-.text-4xl {
+
+/*.text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
