--- a/css/styles.css
+++ b/css/styles.css
@@ -1653,11 +1653,12 @@ video {
   line-height: 2.5rem;
 }
 
-/*.text-base {
+.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-lg {
+
+/*.text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
