--- a/css/styles.css
+++ b/css/styles.css
@@ -1658,11 +1658,12 @@ video {
   line-height: 1.5rem;
 }
 
-/*.text-lg {
+.text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-sm {
+
+/*.text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
