--- a/css/styles.css
+++ b/css/styles.css
@@ -1663,11 +1663,12 @@ video {
   line-height: 1.75rem;
 }
 
-/*.text-sm {
+.text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-xl {
+
+/*.text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
