--- a/css/styles.css
+++ b/css/styles.css
@@ -1668,11 +1668,12 @@ video {
   line-height: 1.25rem;
 }
 
-/*.text-xl {
+.text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.font-bold {
+
+/*.font-bold {
   font-weight: 700;
 }
 .font-medium {
