--- a/css/styles.css
+++ b/css/styles.css
@@ -1673,10 +1673,11 @@ video {
   line-height: 1.75rem;
 }
 
-/*.font-bold {
+.font-bold {
   font-weight: 700;
 }
-.font-medium {
+
+/*.font-medium {
   font-weight: 500;
 }
 .font-semibold {
