--- a/css/styles.css
+++ b/css/styles.css
@@ -1689,10 +1689,11 @@ video {
   text-transform: uppercase;
 }
 
-/*.leading-6 {
+.leading-6 {
   line-height: 1.5rem;
 }
-.leading-\[50px\] {
+
+/*.leading-\[50px\] {
   line-height: 50px;
 }
 .leading-tight {
