--- a/css/styles.css
+++ b/css/styles.css
@@ -1709,11 +1709,12 @@ video {
   letter-spacing: 0.025em;
 }
 
-/*.text-amber-300 {
+.text-amber-300 {
   --tw-text-opacity: 1;
   color: rgb(252 211 77 / var(--tw-text-opacity));
 }
-.text-black {
+
+/*.text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
