--- a/css/styles.css
+++ b/css/styles.css
@@ -1714,11 +1714,12 @@ video {
   color: rgb(252 211 77 / var(--tw-text-opacity));
 }
 
-/*.text-black {
+.text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.text-blue-500 {
+
+/*.text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
