--- a/css/styles.css
+++ b/css/styles.css
@@ -1719,11 +1719,12 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-/*.text-blue-500 {
+.text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
-.text-gray-500 {
+
+/*.text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
