--- a/css/styles.css
+++ b/css/styles.css
@@ -1754,11 +1754,12 @@ video {
   color: rgb(224 231 255 / var(--tw-text-opacity));
 }
 
-/*.text-indigo-600 {
+.text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
 }
-.text-purple-500 {
+
+/*.text-purple-500 {
   --tw-text-opacity: 1;
   color: rgb(168 85 247 / var(--tw-text-opacity));
 }
