--- a/css/styles.css
+++ b/css/styles.css
@@ -1769,10 +1769,11 @@ video {
   color: rgb(147 51 234 / var(--tw-text-opacity));
 }
 
-/*.text-transparent {
+.text-transparent {
   color: transparent;
 }
-.text-white {
+
+/*.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
