--- a/css/styles.css
+++ b/css/styles.css
@@ -1778,10 +1778,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-/*.no-underline {
+.no-underline {
   text-decoration-line: none;
 }
-.opacity-0 {
+
+/*.opacity-0 {
   opacity: 0;
 }
 .opacity-10 {
