--- a/css/styles.css
+++ b/css/styles.css
@@ -1810,10 +1810,11 @@ video {
   opacity: 0.8;
 }
 
-/*.opacity-90 {
+.opacity-90 {
   opacity: 0.9;
 }
-.opacity-\[3\%\] {
+
+/*.opacity-\[3\%\] {
   opacity: 3%;
 }
 .mix-blend-screen {
