--- a/css/styles.css
+++ b/css/styles.css
@@ -1919,12 +1919,13 @@ video {
   transition-duration: 150ms;
 }
 
-/*.transition-all {
+.transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.transition-colors {
+
+/*.transition-colors {
   transition-property: color, background-color, border-color,
     text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
