--- a/css/styles.css
+++ b/css/styles.css
@@ -1925,13 +1925,14 @@ video {
   transition-duration: 150ms;
 }
 
-/*.transition-colors {
+.transition-colors {
   transition-property: color, background-color, border-color,
     text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.delay-100 {
+
+/*.delay-100 {
   transition-delay: 0.1s;
 }
 .delay-200 {
