--- a/css/styles.css
+++ b/css/styles.css
@@ -1991,7 +1991,7 @@ body {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-/*h1,
+h1,
 h2,
 h3,
 h4,
@@ -1999,7 +1999,8 @@ h5,
 h6 {
   font-weight: 600;
 }
-.before\:absolute::before {
+
+/*.before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
 }
